--- a/casundo/myapp/templates/myApp/base.html
+++ b/casundo/myapp/templates/myApp/base.html
@@ -8,16 +8,17 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
     <link rel="stylesheet" href="{% static 'css/list_courts.css' %}">
+    <link rel="stylesheet" href="{% static 'css/court_calendar.css' %}">
+    <link rel="stylesheet" href="{% static 'css/create_reservation.css' %}">
     {% block styles %}{% endblock %}
 </head>
 <body>
     <header>
         {% include 'myApp/navbar.html' %}
     </header>
-    <div class="container-fluid">
-        <div class="row">
-
-            <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
+    <div class="container">
+        <div class="row justify-content-center"> <!-- Center the row -->
+            <main class="col-md-10 col-lg-8"> <!-- Adjust column width for centering -->
                 {% block content %}{% endblock %}
             </main>
         </div>
